<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="15dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="@string/feeders_auto_num"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                 />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                />
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/feeders_equipment_code"
                android:textColor="@color/white"
                android:gravity="center"
                 />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                />
            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:text="@string/feeders_lineNum"
                android:textColor="@color/white"
                android:gravity="center"
                 />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                />
            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:text="@string/feeders_location"
                android:textColor="@color/white"
                android:gravity="center"
                 />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                />
            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:text="@string/feeders_absorbNum"
                android:textColor="@color/white"
                android:gravity="center"
                 />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                />
            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:text="@string/feeders_num"
                android:textColor="@color/white"
                android:gravity="center"
                 />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/feeders_rate"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                android:gravity="center|left"
                 />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            />
        <ListView
            android:id="@+id/fling_materiel_listview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:dividerHeight="1dp"/>
    </LinearLayout>



</FrameLayout>
