<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/about_bg">

    <com.kanban.switchfragmaster.view.TitleBarView
        android:id="@+id/activity_warehouse_kanban_title_bar"
        android:layout_height="40dp"
        android:layout_width="match_parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/frag_status_tv_title"
            android:text="@string/wo_info"/>
    </LinearLayout>
    <LinearLayout
        android:background="@color/lb_whites"
        style="@style/frag_status_out_layout">

        <ImageView
            style="@style/frag_status_image"
            android:layout_marginLeft="5dp"
            android:background="@mipmap/product_no" />
        <LinearLayout
            style="@style/frag_status_layout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_warehouse_kanban_tv_on_production_title"
                style="@style/frag_status_tv_top"
                android:text="@string/on_production" />
            <TextView
                android:id="@+id/activity_warehouse_kanban_tv_on_production"
                style="@style/frag_status_tv_bottom"
                android:textColor="@color/lb_dark_blue"
                android:textSize="16sp"
                android:text="@string/status"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:background="@color/lb_whites"
        style="@style/frag_status_out_layout">

        <ImageView
            style="@style/frag_status_image"
            android:layout_marginLeft="5dp"
            android:background="@mipmap/product_no" />
        <LinearLayout
            style="@style/frag_status_layout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_warehouse_kanban_tv_plan_stop_production_title"
                style="@style/frag_status_tv_top"
                android:text="@string/plan_stop_production" />
            <TextView
                android:id="@+id/activity_warehouse_kanban_tv_plan_stop_production"
                style="@style/frag_status_tv_bottom"
                android:textColor="@color/lb_dark_blue"
                android:textSize="16sp"
                android:text="@string/status"/>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/activity_warehouse_kanban_lv_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:divider="@color/about_bg"
        android:background="@color/whites"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom ="5dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/activity_warehouse_kanban_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2016.3.31 14:36"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_alignParentLeft="true"/>
        <CheckBox
            android:id="@+id/activity_warehouse_kanbancbx_pause_auto_scroll"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause_auto_scroll"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_date"
            android:layout_toEndOf="@+id/tv_date" />
    </LinearLayout>

</LinearLayout>
